tests/invalid/method_on_non_class/main.py
x: int = 42
x.foo()
